--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "braces": "^3.0.2",
     "express": "^4.16.3",
-    "mongoose": "^5.3.16",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mem": "^5.1.1",
+    "mongoose": "^5.3.16"
   }
 }
